# $Id$

PACKAGE=wiredtiger
AC_INIT(WiredTiger, [__EDIT_WIREDTIGER_VERSION__],
	[support@wiredtiger.com],
	wt-__EDIT_WIREDTIGER_VERSION__)

AC_CONFIG_SRCDIR([../dist/RELEASE])
AC_CONFIG_HEADERS([wiredtiger_config.h:config.hin])
AC_CONFIG_AUX_DIR(gnu-support, aclocal)

AC_SUBST(WIREDTIGER_VERSION_MAJOR)
WIREDTIGER_VERSION_MAJOR="__EDIT_WIREDTIGER_VERSION_MAJOR__"
AC_SUBST(WIREDTIGER_VERSION_MINOR)
WIREDTIGER_VERSION_MINOR="__EDIT_WIREDTIGER_VERSION_MINOR__"
AC_SUBST(WIREDTIGER_VERSION_PATCH)
WIREDTIGER_VERSION_PATCH="__EDIT_WIREDTIGER_VERSION_PATCH__"
AC_SUBST(WIREDTIGER_VERSION_STRING)
WIREDTIGER_VERSION_STRING='"__EDIT_WIREDTIGER_VERSION_STRING__"'
AC_SUBST(WIREDTIGER_VERSION_UNIQUE_NAME)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(rt, sched_yield)
AC_CHECK_FUNCS(fcntl pthread_yield)

# Local macros.
AM_TYPES
AM_OPTIONS

AC_CONFIG_FILES([
	Makefile
	wiredtiger.h:../inc_posix/wiredtiger.in
	wt_internal.h:../inc_posix/wt_internal.in])
AC_OUTPUT
